# ttl-quick-viz

./: .gitignore  CLAUDE.md  README.md
.plans/: 2026-04-22-ttl-quick-viz-ui.md  2026-04-23-ttl-quick-viz-api.md
.plans/feature/: diff-graphs.md  graph-filter-and-edge-search.md  graph-tree-renderer.md  graph-viz-ux.md  rebuild-button-and-watcher.md  site-professional-layout.md  standalone-mode-toggle.md  swimlane-layout.md  ttl-source-pane.md  val-analysis-integration.md  vscode-extension.md
.plans/refactor/: api-restructure.md  feature-folder-restructure.md
.specs/: 2026-04-22-ttl-quick-viz-ui-design.md  2026-04-23-api-restructure-design.md  2026-04-23-ttl-quick-viz-api-design.md  debugging-features-roadmap.md
api/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/app/: config.py  main.py  routes.py  schemas.py  store.py  translate.py
api/src/app/: __main__.py  config.py  logging.py
api/src/app/api/: app.py  deps.py  errors.py
api/src/app/api/routes/: graphs.py
api/src/app/domain/: models.py  translate.py
api/src/app/repositories/: base.py  filesystem.py
api/src/app/services/: conversion_service.py  diff_service.py  git_history_service.py  graph_service.py  watcher.py
api/tests/: conftest.py  test_health.py  test_repository.py  test_routes.py  test_routes_history.py  test_routes_ttl.py  test_routes_ttl_at.py  test_service.py  test_store.py  test_translate.py
conversion/: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  ttl2json.py
conversion/src/ttl2json/: __init__.py  cli.py  core.py
conversion/tests/: test_ttl2json.py
docs/: 2026-04-24-app-review.md  2026-04-24-dev-loop-design.md  dev-guide-fastapi.md  dev-guide-react.md  structure-review.md
site/: .env.example  .gitignore  CLAUDE.md  README.md  index.webview.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vite.config.webview.ts
site/src/: App.tsx  index.css  main.tsx
vscode/: .gitignore  .vscodeignore  CLAUDE.md  README.md  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
vscode/scripts/: build-webview.mjs
(+143 files in other folders)
