[tool.poetry]
name = "ttl-quick-viz-api"
version = "0.1.0"
description = "Read-only FastAPI service that serves graph JSON to the ttl-quick-viz site."
authors = []
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.110"
uvicorn = { extras = ["standard"], version = ">=0.27" }
pydantic-settings = ">=2.2"
ttl-quick-viz-conversion = { path = "../conversion", develop = true }
watchdog = ">=4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
httpx = ">=0.27"
ruff = ">=0.5"
mypy = ">=1.10"

[tool.poetry.scripts]
ttl-viz-api = "app.__main__:run"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "TCH"]
# B008: FastAPI's standard `param: T = Depends(...)` pattern.
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
