[tool.poetry]
name = "ttl-quick-viz-conversion"
version = "0.1.0"
description = "CLI + library that converts GO-CAM / Reactome Turtle files to networkx node-link JSON for the ttl-quick-viz site."
authors = []
readme = "README.md"
packages = [{ include = "ttl2json", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
rdflib = ">=7.0"
networkx = ">=3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.5"
mypy = ">=1.10"

[tool.poetry.scripts]
ttl-viz-convert = "ttl2json.cli:main"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "TCH"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = false
files = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
